Got performance test running.